--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,11 @@
 "content_scripts": [
  {
  "matches": ["https://www.google.com/*"],
- "css": ["main.css"]
+ "css": ["main.css"],
+  "js": ["script.js"]
  }
  ],
- 
+
  "page_action": {
  "default_icon": "img.png",
  "default_popup": "popup.html",
